Bug 293947 - Nepomuk Kded module crashed
Summary: Nepomuk Kded module crashed
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: kioslave - nepomuksearch (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
: 294781 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-12 23:16 UTC by m.wege
Modified: 2013-04-29 00:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-02-12 23:16:48 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.8.00 (4.8.0
Qt Version: 4.7.4
Operating System: Linux 3.2.0-15-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed: was using Kmail, when this happened, but do not know, if that is the reason for the crash

-- Backtrace:
Application: KDE-Dienst (kded4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f40782d6780 (LWP 4092))]

Thread 3 (Thread 0x7f406b9a5700 (LWP 4137)):
#0  0x00007fff918b8725 in ?? ()
#1  0x00007fff918b8959 in ?? ()
#2  0x0000003dcbe0407b in __GI_clock_gettime (clock_id=1, tp=0x7f406b9a4b40) at ../sysdeps/unix/clock_gettime.c:100
#3  0x0000003dc9cd6074 in do_gettime (frac=0x7f406b9a4b58, sec=0x7f406b9a4b50) at tools/qelapsedtimer_unix.cpp:123
#4  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#5  0x0000003dc9d986ed in QTimerInfoList::updateCurrentTime (this=0x7f406c001d50) at kernel/qeventdispatcher_unix.cpp:339
#6  0x0000003dc9d98a33 in QTimerInfoList::timerWait (this=0x7f406c001d50, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#7  0x0000003dc9d9744c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f406b9a4c3c) at kernel/qeventdispatcher_glib.cpp:136
#8  0x0000003dc9d974f5 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#9  0x0000003dcd243ff2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x0000003dcd244dfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x0000003dcd245429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x0000003dc9d97f3e in QEventDispatcherGlib::processEvents (this=0x1e767b0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#13 0x0000003dc9d6bcf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#14 0x0000003dc9d6bef7 in QEventLoop::exec (this=0x7f406b9a4dd0, flags=...) at kernel/qeventloop.cpp:201
#15 0x0000003dc9c8327f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#16 0x0000003dc9d4ecbf in QInotifyFileSystemWatcherEngine::run (this=0x1d050c0) at io/qfilesystemwatcher_inotify.cpp:248
#17 0x0000003dc9c85d05 in QThreadPrivate::start (arg=0x1d050c0) at thread/qthread_unix.cpp:331
#18 0x0000003dcb607efc in start_thread (arg=0x7f406b9a5700) at pthread_create.c:304
#19 0x0000003dcaae189d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#20 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f40605c0700 (LWP 12912)):
#0  pthread_mutex_lock (mutex=0x23910d8) at forward.c:182
#1  0x0000003dcd24475f in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x0000003dcd244f82 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x0000003dcd245429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x0000003dc9d97f3e in QEventDispatcherGlib::processEvents (this=0x242c430, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x0000003dc9d6bcf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003dc9d6bef7 in QEventLoop::exec (this=0x7f40605bfdd0, flags=...) at kernel/qeventloop.cpp:201
#7  0x0000003dc9c8327f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x0000003dc9d4ecbf in QInotifyFileSystemWatcherEngine::run (this=0x24137d0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x0000003dc9c85d05 in QThreadPrivate::start (arg=0x24137d0) at thread/qthread_unix.cpp:331
#10 0x0000003dcb607efc in start_thread (arg=0x7f40605c0700) at pthread_create.c:304
#11 0x0000003dcaae189d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f40782d6780 (LWP 4092)):
[KCrash Handler]
#6  QDBusAbstractInterface::asyncCallWithArgumentList (this=0x1d03e40, method=..., args=...) at qdbusabstractinterface.cpp:471
#7  0x00007f4063593c73 in close (this=0x1d03e40) at ./queryinterface.h:43
#8  Nepomuk::SearchUrlListener::~SearchUrlListener (this=0x2115dc0, __in_chrg=<optimized out>) at ../../../../../nepomuk/kioslaves/search/kdedmodule/searchurllistener.cpp:75
#9  0x00007f4063593d99 in Nepomuk::SearchUrlListener::~SearchUrlListener (this=0x2115dc0, __in_chrg=<optimized out>) at ../../../../../nepomuk/kioslaves/search/kdedmodule/searchurllistener.cpp:77
#10 0x0000003dc9d83a88 in QObject::event (this=0x2115dc0, e=<optimized out>) at kernel/qobject.cpp:1200
#11 0x0000003dd49fc474 in notify_helper (e=0x2106f90, receiver=0x2115dc0, this=0x1b3e8a0) at kernel/qapplication.cpp:4486
#12 QApplicationPrivate::notify_helper (this=0x1b3e8a0, receiver=0x2115dc0, e=0x2106f90) at kernel/qapplication.cpp:4458
#13 0x0000003dd4a012e1 in QApplication::notify (this=0x7fff91829a70, receiver=0x2115dc0, e=0x2106f90) at kernel/qapplication.cpp:4365
#14 0x0000003dd6431ae6 in KApplication::notify (this=0x7fff91829a70, receiver=0x2115dc0, event=0x2106f90) at ../../kdeui/kernel/kapplication.cpp:311
#15 0x0000003dc9d6cafc in QCoreApplication::notifyInternal (this=0x7fff91829a70, receiver=0x2115dc0, event=0x2106f90) at kernel/qcoreapplication.cpp:787
#16 0x0000003dc9d7051f in sendEvent (event=0x2106f90, receiver=0x2115dc0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#17 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1b0d5e0) at kernel/qcoreapplication.cpp:1428
#18 0x0000003dc9d97a73 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#19 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#20 0x0000003dcd244a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x0000003dcd245258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x0000003dcd245429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x0000003dc9d97ed6 in QEventDispatcherGlib::processEvents (this=0x1b0ecd0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#24 0x0000003dd4aa410e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#25 0x0000003dc9d6bcf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#26 0x0000003dc9d6bef7 in QEventLoop::exec (this=0x7fff91829a00, flags=...) at kernel/qeventloop.cpp:201
#27 0x0000003dc9d70789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#28 0x00007f4078322d65 in kdemain (argc=1, argv=0x7fff91829e48) at ../../kded/kded.cpp:924
#29 0x0000003dcaa2130d in __libc_start_main (main=0x400630 <main(int, char**)>, argc=1, ubp_av=0x7fff91829e48, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff91829e38) at libc-start.c:226
#30 0x0000000000400661 in _start ()

Reported using DrKonqi
Comment 1 Vishesh Handa 2012-07-10 21:20:37 UTC
*** Bug 294781 has been marked as a duplicate of this bug. ***
Comment 2 Simeon Bird 2013-04-29 00:17:22 UTC
Git commit b1a9916a40c829d9b6430fee83b29ad70cedd1c7 by Simeon Bird.
Committed on 28/04/2013 at 03:46.
Pushed by sbird into branch 'KDE/4.10'.

Nepomuk kded module:

Properly null m_queryInterface after deletion.
In case creating a new interface failed,
we would be left with a dangling pointer, potentially
causing a crash on destruction.
FIXED-IN: 4.10.3

M  +5    -2    nepomuk/kioslaves/search/kdedmodule/searchurllistener.cpp

http://commits.kde.org/kde-runtime/b1a9916a40c829d9b6430fee83b29ad70cedd1c7