Nepomuk kded module:

Properly null m_queryInterface after deletion.
In case creating a new interface failed,
we would be left with a dangling pointer, potentially
causing a crash on destruction.

BUG: 293947
FIXED-IN: 4.10.3